# TUI_DB

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README  README.md  vcpkg.json
doc/: doc.md  doc_ru.md
include/: DataBaseExplorer.hpp  DataBaseExplorer.ipp  DataBaseInterface.hpp  DatabaseExplorer.hpp  LoginForm.hpp  PostgresConnector.hpp  SqliteConnector.hpp
src/: DatabaseExplorer.cpp  LoginForm.cpp  PostgresConnector.cpp  SqliteConnector.cpp  main.cpp
